--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	</developers>
 	<modules>
 		<module>book-author-service</module>
+		<module>auth-service</module>
 	</modules>
 	<scm>
 		<connection/>
