--- a/book-author-service/src/main/resources/application.yaml
+++ b/book-author-service/src/main/resources/application.yaml
@@ -41,6 +41,19 @@ spring:
       host: localhost
       port: 6379
 
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: object-service-group
+#    topic:
+#      request-topic: object-add-request
+#      response-topic: object-add-response
+
 logging:
   level:
     org.springframework: INFO
