--- a/authentication-service/src/main/resources/application.yaml
+++ b/authentication-service/src/main/resources/application.yaml
@@ -14,6 +14,9 @@ spring:
     show-sql: true
   main:
     allow-circular-references: true
+  flyway:
+    enabled: ${FLYWAY_ENABLED:true}
+    clean-disabled: false
 server:
   port: 9980
 
