--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -115,6 +115,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.authenticationservice.AuthenticationServiceApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
